tests/negative/invalid_extends.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that extending a non-existent class causes a compile error.

class Child extends NonExistentParent {
    x: int;
}

let c = new Child();
